Header is correct height on mobile

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,30 +1,25 @@
 @import "src/style.scss";
 
-$text-height: calc(#{$header-height} * 0.75);
 
 .Header {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  grid-row: 1 / 2;
   background-color: $wesleyan-red;
   display: flex;
-  align-items: center;
-  justify-content: center;
   text-decoration: none;
   font-family: $raleway;
-
+  height: $header-height;
   font-size: 18px;
-  height:  auto;
 
   @media only screen and (min-width: 350px){
     font-size: calc((11vw - 15px) * .75);
   }
 
   @media only screen and (min-width: 510px){
-    font-size: $text-height;
-    height: $header-height;
+    font-size: calc(#{$header-height} * 0.75);
   }
 
   ul {
+    margin: 0;
     padding-left: 0;
     width: 100%;
     display: flex;
